--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "EvaluationAssignmentTestApp"
 include ':app'
+include ':core'
+include ':coreui'
